fixed submit button mobile
webkit none

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -83,6 +83,7 @@ div#sg-response {
 
 #sg-submit-btn{
   min-width: 362.78px;
+   -webkit-appearance: none;
 }
 
 ::placeholder{
